# Lab4-graphs

./: CMakeLists.txt
graphics/: GraphRenderer.cpp  GraphRenderer.h  GraphVisualizer.cpp  GraphVisualizer.h  MainWindow.cpp  MainWindow.h
include/: Chronometer.h  DirectedGraph.h  Graph.h  GraphColoring.h  GraphGenerator.h  IGraph.h  UndirectedGraph.h
src/: Chronometer.cpp  DirectedGraph.cpp  Graph.cpp  GraphColoring.cpp  GraphGenerator.cpp  Main.cpp  UndirectedGraph.cpp
tests/: AllTests.cpp  TestRunner.cpp  TestRunner.h
